[package]
name = "marble_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_rapier3d = "0.21.0"
serde_json = "1.0.94"
serde = "1.0.158"

[profile.dev.package.bevy_rapier3d]
opt-level = 3