[package]
name = "marble_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_rapier3d = "0.21.0"
serde_json = "1.0.94"
serde = "1.0.158"
phf = {version = "0.11.1", features = ["macros"]}
bitmask-enum = "2.1.0"
colored = "2.0.0"
bevy_pkv = "0.7.0"
bevy_framepace = "0.12.1"

[profile.dev.package.bevy_rapier3d]
opt-level = 3